[project]
name = "article-to-md"
version = "0.4.0"
description = "Convert an article or web page to Markdown"
readme = "README.md"
authors = [
    { name = "nateify", email = "nateify@users.noreply.github.com" }
]
requires-python = ">=3.13"
keywords = ["markdown", "scraping", "extraction", "web scraping"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
dependencies = [
    "curl-cffi>=0.13.0",
    "cyclopts>=4.8.0",
    "html-to-markdown>=2.28.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "readabilipy",
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
    "trafilatura>=2.0.0",
    "unidecode>=1.4.0",
]

[project.scripts]
article-to-md = "article_to_md.main:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
readabilipy = { git = "https://github.com/donbcd/ReadabiliPy" }
